--- a/files/package.json
+++ b/files/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
+    "nodemon": "^1.19.2",
     "pg": "^7.12.1"
   }
 }
