--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-node-backend",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Creates a nodejs app with postgres and express-promise-router.",
   "main": "cli.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "author": "Rui Aguiar",
   "license": "ISC",
   "bin": {
-    "create-node-project": "./cli.js"
+    "create-node-backend": "./cli.js"
   },
   "dependencies": {}
 }
